--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-  },
+  "start": "node app.js",
+  "test": "echo \"No tests specified\" && exit 0"
+}
   "dependencies": {
     "express": "^4.13.3"
   },
